Add link href in e-wallet, laporin and rekening

--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
                     <img src="LAPORIN YUK!!!.png" alt="Denim Jeans" style="width:100%">
                     <h1>Cek E-wallet</h1>
                     <p>Kamu bisa melacak nomor e-wallet seseorang dengan memilih salah satu seperti ovo,dana,gopay,shoppepay</p>
-                    <p><button>Cek E-wallet</button></p>
+                     <a href="EWallet.html"><p><button>Cek E-wallet</button></p></a>
                 </div>
                 <div class="card">
                     <img src="LAPORIN YUK!!!.png" alt="Denim Jeans" style="width:100%">
                     <h1>LaporinYuk</h1>
 
                     <p>Kamu bisa melaporkan nomor rekening atau nomor e-wallet seseorang yang pernah menipu kamu atau mencoba menipu kamu nih</p>
-                    <p><button>Laporin!!!</button></p>
+                    <a href="login.html"><p><button>Laporin!!!</button></p></a>
                 </div>
                 <div class="card">
                     <img src="LAPORIN YUK!!!.png" alt="Denim Jeans" style="width:100%">
                     <h1>Cek Rekening</h1>
 
                     <p>Kamu bisa melacak nomor rekening seseorang dengan memilih salah satu bank seperti BSI,BRI,mandiri,BNI dll</p>
-                    <p><button>Cek Rekening</button></p>
+                    <a href="Bank.html"><p><button>Cek Rekening</button></p></a>
                 </div>
             </div>
 
