--- a/Bank.html
+++ b/Bank.html
@@ -18,16 +18,16 @@
           </select>
         </div>
         <div class="form-group">
-          <label for="noCek">No Rekening</label>
+          <label for="noCek">No Rekening Bank</label>
           <input class="cariRek" type="text" id="noCek" name="noCek" required>
         </div>
         <button type="submit">Cari</button>
       </form>
       <div id="form-data" class="form-data hide">
-        <h2>Hasil No Rekening</h2>
+        <h2>Hasil No Rekening Bank</h2>
         <p id="jenis-data"></p>
         <p id="no-data"></p>
-        <p>Nomor Rekening yang anda cari belum pernah terlibat dalam penipuan/belum ada yang melaporkan</p>
+        <p>Nomor Rekening bank yang anda cari belum pernah terlibat dalam penipuan/belum ada yang melaporkan</p>
       </div>
     </div>
     <script src="Bank.js"></script>
