Update link laporin

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>Website kami akan memberitahukan tentang keamanan sebuah nomor rekening atau nomor e-wallet seseorang</p>
             <br>
             <br>
-            <button class="btn"><a href="">Ayo Laporin</a></button>
+            <button class="btn"><a href="login-cek.html">Ayo Laporin</a></button>
         </div>
     </section><br>
     <!--Membuat Card Informasi untuk Laporin Cek Rekning dan Cek nomor-->
