--- a/home-afterlog.html
+++ b/home-afterlog.html
@@ -38,7 +38,7 @@
             <p>Website kami akan memberitahukan tentang keamanan sebuah nomor rekening atau nomor e-wallet seseorang</p>
             <br>
             <br>
-            <button class="btn"><a href="">Ayo Laporin</a></button>
+            <button class="btn"><a href="lapor.html">Ayo Laporin</a></button>
         </div>
     </section><br>
     <!--Membuat Card Informasi untuk Laporin Cek Rekning dan Cek nomor-->
